# CodeAtlas

./: .env.example  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/agents/: code_assistant.py  patch_draft_agent.py
backend/app/api/: errors.py  language.py  router.py
backend/app/api/routes/: chat.py  checks.py  health.py  jobs.py  patches.py  repositories.py  tools.py
backend/app/checks/: recommendation.py
backend/app/core/: config.py  db.py  logging.py
backend/app/indexing/: scanner.py
backend/app/models/: __init__.py  job_run.py  repository.py
backend/app/schemas/: chat.py  checks.py  common.py  jobs.py  patch.py  repository.py  tool.py
backend/app/services/: chat_service.py  checks_service.py  indexing_service.py  job_service.py  patch_service.py  repository_service.py  retrieval_service.py
backend/app/tools/: __init__.py  repository_tools.py
backend/scripts/: export_openapi.py
backend/tests/: test_api_contract.py  test_chat.py  test_checks.py  test_jobs.py  test_jobs_list.py  test_patches.py  test_repositories.py  test_tools.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css
frontend/components/: workspace-shell.tsx
frontend/components/chat/: chat-history-panel.tsx  chat-panel.tsx
frontend/components/checks/: checks-panel.tsx
frontend/components/citations/: citation-panel.tsx
frontend/components/jobs/: job-activity-panel.tsx
frontend/components/patches/: patch-draft-panel.tsx
frontend/lib/: api.ts  types.ts  workspace-i18n.ts
frontend/scripts/: generate-api-types.mjs
(+5 files in other folders)
